# thesis-bsc

./: .gitignore  .travis.yaml  README.md  draft.md
simulator/: cone.py  config.py  motion.py  odometry.py  point.py  pose.py  simulator.py  utils.py
simulator/doc/: simulator.puml  use case.puml
simulator/tracks/: FSG21.csv  kecso.csv  track.csv
slam_cpp/: CMakeLists.txt
slam_cpp/data/: input.txt  input_FSG21.txt  input_FSG21_noisy.txt  input_kecso.txt  input_kecso_noisy.txt  input_noisy.txt  input_track.txt  input_track_noisy.txt
slam_cpp/doc/: graphslam.puml  use case.puml
slam_cpp/include/: dataenumerator.h  graph.h  perceptionenumerator.h  types.h  utils.h
slam_cpp/src/: CMakeLists.txt  Types.h  dataenumerator.cpp  graph.cpp  main.cpp  perceptionenumerator.cpp
slam_cpp/src/dataenumerator/: CMakeLists.txt  DataEnumerator.cpp  DataEnumerator.h
slam_cpp/src/dataenumerator/test/: CMakeLists.txt  TestDataEnumerator.cpp  input1.txt  input2.txt  input3.txt
slam_cpp/src/graph/: CMakeLists.txt  Graph.cpp  Graph.h  Utils.h
slam_cpp/src/graph/test/: CMakeLists.txt  TestGraph.cpp
slam_cpp/src/matplotlibcpp/: CMakeLists.txt  matplotlibcpp.h
slam_cpp/src/misc/: Types.h  Utils.h
slam_cpp/src/misc/test/: CMakeLists.txt  TestTypes.cpp  TestUtils.cpp
slam_cpp/tools/: coverage.sh  plot.py
